Working on chapter03

--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -145,6 +145,19 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2024}
 }
 
+@misc{n_tier_wiki,
+		author = {Wikipedia},
+    title = {{Aplikacja Play24. Strona główna}},
+    note = {\url{https://en.wikipedia.org/wiki/Multitier_architecture} [dostęp dnia 22 listopada 2024]}
+}
+
+@misc{n_tier_baeldung,
+		author = {baeldung},
+    title = {{N-Tier Architecture}},
+    note = {\url{https://www.baeldung.com/cs/n-tier-architecture} [dostęp dnia 22 listopada 2024]},
+		year = {2022}
+}
+
 
 @misc{e-kartoteka,
     author = {E-Kartoteka},
@@ -172,6 +185,13 @@ abstract = "Automatic error-correction m natural language processing is based on
     title = {{Should You Run Your Database in Docker?}},
     note = {\url{https://vsupalov.com/database-in-docker/} [dostęp dnia 25 lipca 2024]},
     year = {2024}
+}
+
+@ARTICLE{n_tier_medium,
+    author = {Ege Karataş},
+    title = {{Should You Run Your Database in Docker?}},
+    note = {\url{https://medium.com/@segekaratas/understanding-n-tier-architecture-building-robust-and-scalable-applications-62db30a40b5} [dostęp dnia 25 lipca 2024]},
+    year = {2023}
 }
 
 @ARTICLE{EARTHLY,
