--- a/Dyplom/rozdzial02.tex
+++ b/Dyplom/rozdzial02.tex
@@ -50,7 +50,7 @@ Interakcje między komponentami są kluczowe do poprawnego funkcjonowania całej
 \end{itemize}
 
 
-\section{Wymagania aplikacji} %DONE: aktualizaja opisu rozmowy na ostanim spotkaniu
+\section{Wymagania aplikacji}
 
 Aplikacja eBOK ma za zadanie wspierać zarządzanie wspólnotami mieszkaniowymi poprzez poprawę komunikacji między mieszkańcami a administracją oraz automatyzację procesów związanych z obsługą nieruchomości. Kluczowym elementem systemu jest zarządzanie lokalami, które odgrywają centralną rolę w wielu funkcjach aplikacji – od zgłaszania usterek, przez płatności, aż po organizację głosowań.
 
